crates/gitty/tests/snapshots/render__graph_compact_140_style.snap
---
source: crates/gitty/tests/render.rs
expression: digest(&b)
---
 0 7:2f81f7/161b22 108:e6edf3/161b22 11:7d8590/161b22 2:e6edf3/161b22 11:2f81f7/161b22 1:e6edf3/161b22
 1 1:e6edf3/0d1117 7:2f81f7/0d1117 5:7d8590/0d1117 43:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
 2 3:e6edf3/142a48 1:2f81f7/142a48 35:e6edf3/142a48 6:0d1117/2f81f7 1:e6edf3/142a48 2:f85149/142a48 1:e6edf3/142a48 6:7d8590/142a48 1:e6edf3/142a48 1:30363d/0d1117 1:e6edf3/0d1117 2:f85149/0d1117 10:e6edf3/0d1117 3:7d8590/0d1117 7:2f81f7/0d1117 3:7d8590/0d1117 2:3fb950/0d1117 3:f85149/0d1117 9:7d8590/0d1117 43:e6edf3/0d1117
 3 3:e6edf3/0d1117 1:2f81f7/0d1117 1:f85149/0d1117 1:db6d28/0d1117 1:f85149/0d1117 1:d29922/0d1117 2:f85149/0d1117 36:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 6:7d8590/0d1117 1:e6edf3/0d1117 84:30363d/0d1117
 4 3:e6edf3/0d1117 2:2f81f7/0d1117 2:db6d28/0d1117 2:d29922/0d1117 1:f85149/0d1117 30:e6edf3/0d1117 6:0d1117/f85149 1:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 5:7d8590/0d1117 1:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
 5 3:e6edf3/0d1117 2:2f81f7/0d1117 2:db6d28/0d1117 2:d29922/0d1117 1:f85149/0d1117 32:e6edf3/0d1117 4:0d1117/d29922 1:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 5:7d8590/0d1117 1:e6edf3/0d1117 1:30363d/0d1117 1:e6edf3/1e2329 1:3fb950/1e2329 75:e6edf3/1e2329 2:3fb950/1e2329 1:e6edf3/1e2329 2:f85149/1e2329 1:e6edf3/1e2329
 6 3:e6edf3/0d1117 2:2f81f7/0d1117 2:db6d28/0d1117 2:d29922/0d1117 1:f85149/0d1117 30:e6edf3/0d1117 6:0d1117/db6d28 1:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 5:7d8590/0d1117 1:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
 7 3:e6edf3/0d1117 1:2f81f7/0d1117 1:58a6ff/0d1117 1:db6d28/0d1117 2:d29922/0d1117 2:f85149/0d1117 36:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 6:7d8590/0d1117 1:e6edf3/0d1117 1:30363d/0d1117 16:e6edf3/0d1117 7:7d8590/0d1117 60:e6edf3/0d1117
 8 3:e6edf3/0d1117 2:2f81f7/0d1117 1:58a6ff/0d1117 31:e6edf3/0d1117 9:0d1117/58a6ff 1:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 5:7d8590/0d1117 1:e6edf3/0d1117 1:30363d/0d1117 83:7d8590/121d2f
 9 3:e6edf3/0d1117 2:2f81f7/0d1117 1:58a6ff/0d1117 41:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 5:7d8590/0d1117 1:e6edf3/0d1117 1:30363d/0d1117 3:56936a/173c24 1:56936a/12261e 79:e6edf3/12261e
10 3:e6edf3/0d1117 2:2f81f7/0d1117 1:58a6ff/0d1117 41:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 5:7d8590/0d1117 1:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
11 3:e6edf3/0d1117 1:2f81f7/0d1117 2:58a6ff/0d1117 41:e6edf3/0d1117 2:f85149/0d1117 1:e6edf3/0d1117 5:7d8590/0d1117 1:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
12 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
13 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
14 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
15 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
16 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
17 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
18 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
19 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
20 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
21 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
22 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
23 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
24 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
25 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
26 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
27 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
28 56:e6edf3/0d1117 1:30363d/0d1117 83:e6edf3/0d1117
29 1:7d8590/161b22 3:2f81f7/161b22 7:7d8590/161b22 5:2f81f7/161b22 8:7d8590/161b22 1:2f81f7/161b22 9:7d8590/161b22 1:2f81f7/161b22 8:7d8590/161b22 1:2f81f7/161b22 10:7d8590/161b22 3:2f81f7/161b22 7:7d8590/161b22 1:2f81f7/161b22 8:7d8590/161b22 1:2f81f7/161b22 7:7d8590/161b22 1:2f81f7/161b22 58:7d8590/161b22
